css/style.css
html, body, .player {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  background: rgb(33, 68, 182);
}

#navigationBar {
  position: absolute;
  top: 0;
  z-index: 1;
  padding: 0.5em;
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  background: rgba(0,0,0,0.5);
}

button, #help {
  text-decoration: none;
  font-size: 1rem;
  font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: #000;
  background: #fff;
  border: 0;
  border-radius: 2px;
  text-align: center;
  padding: 0.25em 0.5em;
  margin: 0.2em;
}

button:hover, #help:hover {
  transition: background 0.2s ;
  background: #aaa;
}

.hidden {
  display: none !important;
}

.wrapper {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  left:50%;
  top:50%;
  transform: translate(-50%,-50%);
  font-size: 2rem;
  font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: #fff;
}

.spinner {
  color: rgb(22, 211, 113);
  background: transparent;
  border:4px solid;
  border-bottom-color: transparent;
  border-radius:100%;
  width: 100px;
  height: 100px;


  animation: ball-clip-rotate .75s linear infinite;
}

@keyframes ball-clip-rotate {
    0% {
      transform: rotate(0deg);
    }
    50% {
      transform: rotate(180deg);
    }
    100% {
      transform: rotate(360deg);
    }
}

